--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@
 }
 
 .footer {
-  width: 80%;
-  height: 25vh;
+  width: 85%;
+  height: 30vh;
   background-color: #26267c;
   color: white;
   display: flex;
@@ -65,7 +65,7 @@ h2 {
 
 header {
   display: block;
-  background-color: #26267c;
+  background-color: white;
   width: 100%;
 }
 
@@ -99,7 +99,7 @@ header ul li a {
   border: solid;
   border-color: white;
   border-radius: 50px;
-  background-color: #26267c;
+  background-color: white;
   color: #04afe9;
   padding: 0.3em;
 }
@@ -291,8 +291,123 @@ main {
 .border-contact {
   border: 1px solid #2e367e;
   border-radius: 1px;
+
+}
+.container{
+  width:80%;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
+.details{
+  text-align: center;
+}
+
+.details h2{
+  color:#243238;
+  font-size:50px;
+  margin: 0;
+}
+
+.main-box{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.box{
+  width: 300px;
+  height: 400px;
+  margin: 10px;
+  text-align: center;
+  padding: 40px 20px;
+  color: #ffffff;
+  position: relative;
+  z-index: 2;
+  border-radius: 5px;
+
+}
+.box > * {
+  position: relative;
+  z-index: 2;
+  color: white;
+  
+  ;
+}
+
+.box::before{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
+.box:hover::before{
+  width: 95%;
+  height: 95%;
+  transition: all ease .50s;
+}
+
+.box .icon{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: #ffffff;
+  text-align: center;
+  display: inline-block;
+  position: relative;
+}
+
+.box .icon .fas{
+  color: #404044;
+  font-size: 30px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+hr{
+  margin-top: 25px;
+  margin-bottom: 25px;
+  display: block;
+  width: 70%;
+  border: 1px solid rgba(255,255,255, 0.1);
+
+}
+
+.box a{
+  text-decoration: none;
+  color: rgba(255,255,255, 0.1);
+  text-transform: uppercase;
+  background-color:white ;
+  padding: 10px 25px;
+  border-radius: 25px;
+  margin-top: 25px;
+  display: inline-block;
+  font-weight: 600 ;
+}
+.box a:hover{
+  background-color:#243238 ;
+}
+
+.box .white-border{
+  border: 1px solid #ffffff;
+}
+
+
+.box-grey{
+  background-color: #04afe9 ;
+}
+
+.box-red{
+  background-color:#2e367e;
+}
 @media screen and (max-width: 480px) {
   .neonube {
     max-width: 100%;
@@ -328,6 +443,7 @@ main {
     margin: auto;
     display: none;
   }
+  
 }
 
 /*# sourceMappingURL=style.css.map */
