--- a/scss/componentes/style.scss
+++ b/scss/componentes/style.scss
@@ -3,4 +3,7 @@
 @import '../componentes/main';
 @import '../base/mediaquery';
 @import '../base/mediaquery';
+@import '../componentes/mainIndex';
+@import '../componentes/mainServicio';
+@import '../componentes/mainAyuda';
 @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@200&display=swap');
