--- a/css/componentes/style.css
+++ b/css/componentes/style.css
@@ -80,7 +80,7 @@ header h1 {
 header nav {
   text-align: right;
   display: inline-block;
-  width: 60%;
+  width: 75%;
 }
 
 header ul {
@@ -146,45 +146,55 @@ main {
   width: 1200px;
 }
 
-.p-principal {
-  font-size: 2.5em;
-  color: #26267c;
-  text-align: left;
-  margin-bottom: -5px;
-  margin-top: 70px;
-  align-self: center;
-  padding-right: 100px;
-  padding-left: 30px;
-  padding-top: 10px;
-  font-family: archivo;
+.contenido {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.p-secundario {
-  font-size: 1.9em;
-  color: #26267c;
-  text-align: left;
-  align-self: center;
-  padding-right: 100px;
-  padding-bottom: 40px;
-  padding-left: 30px;
-  font-family: archivo;
+/*.p-principal{
+
+    font-size: 2.5em;
+    color: rgb(38, 38, 124);
+    text-align: left;
+    margin-bottom: -5px;
+    margin-top: 70px;
+    align-self: center;
+    padding-right: 100px;
+    padding-left: 30px;
+    padding-top: 10px;
+    font-family: archivo;
+
+
+}
+.p-secundario{
+    font-size: 1.9em;
+    color: rgb(38, 38, 124);
+    text-align: left;
+    align-self: center;
+    padding-right: 100px;
+    padding-bottom: 40px;
+    padding-left: 30px;
+    font-family: archivo;
+
 }
 
 .img {
-  width: 1000px;
-  display: flex;
-  margin: 20px 0;
-  padding-bottom: 40px;
+    width: 1000px;
+    display: flex;
+    margin: 20px 0;
+    padding-bottom: 40px;
 }
 
-.neonube {
-  max-width: 100%;
-  object-fit: contain;
-  height: auto;
-  margin-top: 3rem;
+.neonube{
+    max-width: 100%;
+    object-fit: contain;
+    height:auto;
+    margin-top: 3rem;
 }
-
-/* whatsapp*/
+whatsapp*/
 .container-whatsapp {
   display: flex;
 }
@@ -447,6 +457,427 @@ hr {
     height: auto;
     margin: auto;
     display: none;
+  }
+}
+.h1 {
+  font-size: 20px;
+}
+
+h2 {
+  font-size: 20px;
+}
+
+.img-container {
+  display: flex;
+}
+
+header {
+  display: block;
+  background-color: white;
+  width: 100%;
+}
+
+header h1 {
+  text-transform: uppercase;
+  text-align: left;
+  width: 30%;
+  display: inline-block;
+}
+
+header nav {
+  text-align: right;
+  display: inline-block;
+  width: 75%;
+}
+
+header ul {
+  display: inline-block;
+  list-style-type: none;
+  margin: 1em auto;
+  text-align: center;
+  font-size: large;
+}
+
+header ul li {
+  display: inline-block;
+}
+
+header ul li a {
+  text-decoration: none;
+  border: solid;
+  border-color: white;
+  border-radius: 50px;
+  background-color: white;
+  color: #04afe9;
+  padding: 0.3em;
+}
+
+header ul li a:hover {
+  border-radius: 10px;
+  border: 1px solid #26267c;
+  color: #26267c;
+  font-weight: bold;
+  transition: 0.2s ease-out;
+}
+
+header ul li a:active {
+  padding: 0.2em;
+}
+
+.checkbox {
+  display: none;
+  color: #26267c;
+  cursor: pointer;
+  font: 30px;
+  line-height: 80px;
+  margin-right: 1px;
+  display: none;
+}
+
+#check {
+  display: none;
+}
+
+/*main index*/
+main {
+  min-height: 80vh;
+}
+
+.corousel-item {
+  height: 50px;
+  background-color: #777;
+  color: white;
+  position: relative;
+}
+
+.container {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding-bottom: 50px;
+}
+
+.contenido {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.contenido .info {
+  position: relative;
+  width: 650px;
+  margin-left: 30px;
+  margin-top: 25px;
+}
+
+.contenido .info h2 {
+  color: #2e367e;
+  line-height: 1.2em;
+  font-weight: 500;
+  text-align: left;
+  margin-left: 30px;
+  padding-left: 5px;
+  padding-top: 5px;
+  font-size: 2.3em;
+}
+
+.contenido .info h2 span {
+  color: #2e367e;
+  font-weight: 200;
+  margin-left: -29px;
+  padding-left: 30px;
+  padding-top: 10px;
+  margin-bottom: 20px;
+}
+
+.contenido .info .btn1 {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 8px 20px;
+  background: dodgerblue;
+  color: #0a0a36;
+  border-radius: 40px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-decoration: none;
+  margin-left: 30px;
+}
+
+.contenido .info .btn2 {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 8px 20px;
+  background: #00bb2d;
+  color: #ffffff;
+  border-radius: 40px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-decoration: none;
+  font-family: archivo;
+}
+
+.contenido .img {
+  width: 400px;
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 50px;
+  margin-top: 55px;
+  margin-bottom: 50px;
+  margin-right: 2%;
+}
+
+.contenido .img img {
+  max-width: 500px;
+}
+
+.btn2 {
+  font-weight: bold;
+}
+
+.nosotros, .ayuda, .servicios {
+  color: black;
+}
+
+.lista-c {
+  color: black;
+  list-style: none;
+}
+
+.border-contact {
+  border: 1px solid #2e367e;
+  border-radius: 1px;
+}
+
+.container {
+  width: 80%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.details {
+  text-align: center;
+}
+
+.details h2 {
+  color: #243238;
+  font-size: 50px;
+  margin: 0;
+}
+
+.main-box {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.box {
+  width: 300px;
+  height: 400px;
+  margin: 10px;
+  text-align: center;
+  padding: 40px 20px;
+  color: #ffffff;
+  position: relative;
+  z-index: 2;
+  border-radius: 5px;
+}
+
+.box > * {
+  position: relative;
+  z-index: 2;
+  color: white;
+}
+
+.box::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
+.box:hover::before {
+  width: 95%;
+  height: 95%;
+  transition: all ease 0.5s;
+}
+
+.box .icon {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: #ffffff;
+  text-align: center;
+  display: inline-block;
+  position: relative;
+}
+
+.box .icon .fas {
+  color: #404044;
+  font-size: 30px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+hr {
+  margin-top: 25px;
+  margin-bottom: 25px;
+  display: block;
+  width: 70%;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.box a {
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.1);
+  text-transform: uppercase;
+  background-color: white;
+  padding: 10px 25px;
+  border-radius: 25px;
+  margin-top: 25px;
+  display: inline-block;
+  font-weight: 600;
+}
+
+.box a:hover {
+  background-color: #243238;
+}
+
+.box .white-border {
+  border: 1px solid #ffffff;
+}
+
+.box-grey {
+  background-color: #04afe9;
+}
+
+.box-red {
+  background-color: #2e367e;
+}
+
+h3 a {
+  text-decoration: none;
+  color: #2e367e;
+}
+
+.wrapper {
+  width: 1170px;
+  margin-top: -5%;
+  margin-right: 1px;
+  margin-left: 90px;
+  margin-bottom: 10%;
+  height: 80vh;
+}
+
+.wrapper h2 {
+  font-family: archivo;
+  font-weight: bold;
+  text-align: center;
+  font-size: 60px;
+  color: #fff;
+  margin: 0;
+}
+
+.ayuda {
+  position: relative;
+  width: 31%;
+  height: 320px;
+  background: #04afe9;
+  box-sizing: border-box;
+  padding: 20px 15px;
+  transition: 0.5s;
+  overflow: hidden;
+  float: left;
+  margin: 0 10px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.line {
+  width: 150px;
+  height: 3px;
+  background: #fff;
+  margin: 0 auto 60px auto;
+}
+
+.ayuda p {
+  color: white;
+  font-size: 15px;
+  font-weight: normal;
+}
+
+.ayuda h3 {
+  font-size: 25px;
+  font-family: archivo;
+  letter-spacing: 1px;
+  color: #262626;
+}
+
+.social {
+  width: 60px;
+  height: 60px;
+  background: #262626;
+  border-radius: 50%;
+  margin: 5% auto;
+}
+
+.social i {
+  font-size: 30px;
+  padding: 15px;
+  color: #fff;
+}
+
+.ayuda:hover {
+  box-shadow: 0 30px 35px rgba(0, 0, 0, 0.7);
+}
+
+.ayuda::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
+.ayuda:hover::before {
+  width: 95%;
+  height: 95%;
+  transition: all ease 0.5s;
+}
+
+.ayuda span {
+  position: absolute;
+  top: 0;
+  left: -110%;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+}
+
+.ayuda:hover span {
+  left: 110%;
+}
+
+@media screen and (max-width: 1190px) {
+  .max-width {
+    padding: 0 25px;
+  }
+
+  .box {
+    width: calc(50% - 10px);
+    margin-bottom: 20px;
   }
 }
 
