--- a/scss/componentes/_main.scss
+++ b/scss/componentes/_main.scss
@@ -28,7 +28,15 @@ main{
     width: 1200px;
 
 }
-.p-principal{
+
+.contenido{
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+/*.p-principal{
 
     font-size: 2.5em;
     color: rgb(38, 38, 124);
@@ -68,7 +76,7 @@ main{
     height:auto;
     margin-top: 3rem;
 }
-/* whatsapp*/
+whatsapp*/
 .container-whatsapp{
     display: flex;
 }
